# SIMON

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml  tutorial.ko.md  tutorial.md
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  auth.py  chat.py
app/routers/: auth.py  chat.py  conversations.py  openai.py
app/services/: auth.py  database.py  llm.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: api.ts
frontend/src/lib/components/: ApiKeysModal.svelte  AuthPanel.svelte  ChatInput.svelte  ChatWindow.svelte  MarkdownRenderer.svelte  MarkdownToggle.svelte  MessageBubble.svelte  SettingsPanel.svelte  Sidebar.svelte  ThinkingCollapsible.svelte
frontend/src/lib/stores/: auth.ts  chat.ts  conversations.ts  index.ts  settings.ts
frontend/src/routes/: +layout.svelte  +page.svelte
nginx/: default.conf
