[project]
name = "simon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "aiosqlite",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
